<resources>
    <string name="app_name">头条助手</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="please_wait">请稍等...</string>

    <!--navigation-->
    <string name="my_nickname">CSDN_LQR</string>
    <string name="my_email">linqiarui@gmail.com</string>

    <!--menu-->
    <string name="video_list">视频列表</string>
    <string name="pic_list">图片列表</string>
    <string name="download_manager">下载管理</string>
    <string name="setting">设置</string>
    <string name="share">分享</string>
    <string name="explain">说明</string>
    <string name="about">关于</string>

    <string name="double_click_exit">再按一次退出</string>
    <string name="parse_success">获取成功</string>

    <string name="please_choose_definition">请选择清晰度</string>
    <string name="no_find_video">没有找到视频</string>
    <string name="parse_error">解析出错</string>

    <string name="please_input_url">请输入url地址</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="url_format_error">链接格式有误</string>

    <string name="pending">准备中...</string>
    <string name="progress">下载中...</string>
    <string name="paused">已暂停</string>
    <string name="completed">已完成</string>
    <string name="error">出错</string>
    <string name="warn">警告</string>

    <string name="delete">删除</string>

    <string name="no_vides_yet">还没有视频哦~</string>
    <string name="no_pics_yet">还没有图片哦~</string>
    <string name="no_download_task">没有下载任务哦~</string>

    <string name="jianshu">简书</string>
    <string name="jianshu_url">http://www.jianshu.com/u/f9de259236a3</string>
    <string name="CSDN">CSDN</string>
    <string name="CSDN_url">http://blog.csdn.net/csdn_lqr</string>
    <string name="technical_framework">相关技术</string>
    <string name="technical_framework_detail">MVP + RxJava + Retrofit + jsoup ...</string>
    <string name="statement">声明</string>
    <string name="statement_detail">本应用只为方便用户保存今日头条的视频及图片，不涉及任何商业利益。本人无意损害今日头条的任何利益，若有存在任何冲突，请及时与我联系，本人将删除本应用及相关资料。</string>

    <string name="fun_enjoy">兴趣使然</string>
</resources>
