<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300px"
        android:layout_marginBottom="40px"
        android:background="@color/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivHeader"
            android:layout_width="150px"
            android:layout_height="150px"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30px"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@mipmap/my_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20px"
            android:text="CSDN_LQR"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:text="@string/jianshu"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvJianShuUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:layout_marginLeft="50px"
        android:autoLink="web"
        android:text="@string/jianshu_url"
        android:textSize="14sp"/>

    <View
        style="@style/Line"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:text="@string/CSDN"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvCSDNUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:layout_marginLeft="50px"
        android:autoLink="web"
        android:text="@string/CSDN_url"
        android:textSize="14sp"/>

    <View
        style="@style/Line"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:text="@string/technical_framework"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:layout_marginLeft="50px"
        android:text="@string/technical_framework_detail"
        android:textSize="14sp"/>

    <View
        style="@style/Line"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:text="@string/statement"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:layout_marginLeft="50px"
        android:text="@string/statement_detail"
        android:textSize="14sp"/>

    <View
        style="@style/Line"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50px"
        android:text="@string/fun_enjoy"
        android:textSize="14sp"/>

</com.zhy.autolayout.AutoLinearLayout>