<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="480px"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/please_input_url"
            android:textColor="@color/white"
            android:textSize="30px"/>

        <EditText
            android:id="@+id/etUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"/>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCancle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="@color/white"
                android:textSize="30px"/>

            <TextView
                android:id="@+id/tvSure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="30px"/>

        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoFrameLayout>